Fixed some text spacing.

--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
   }
 
 h1 {
-   font-family: 'Oswald'; 
-   margin-top: 30%;
-   margin: 20% 10% 15px; 10%;
+   font-family: 'Oswald';
+   font-size: 40px;
+   margin: 10% 10% 15px 10%;
 }
 
 .size {
@@ -14,6 +14,8 @@ h1 {
 }
 
 p {
+    line-height: 20px;
+    font-size: 12px;
     font-family: 'Roboto';
     margin-left: 10%;
     margin-right: 10%;
@@ -21,7 +23,7 @@ p {
 
 #hosted {
     font-family: 'Roboto';
-    margin: 0 10% 10px 10%;
+    margin: 0 10% 20px 10%;
 }
 
 .parent-pay {
@@ -66,7 +68,7 @@ img {
 }
 
 .donate {
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 #sponsor-logo {
@@ -74,19 +76,24 @@ img {
 }
 
 #order {
+    padding: 10px;
     font-family: "Oswald";
     font-size: 24px;
 }
 
 #donate {
+    padding: 10px;
     font-family: "Oswald";
     font-size: 24px;
 }
 
 .notes {
+    margin-left: 0px;
     margin-top: 16px;
     font-size: 12px;
     color: lightgrey;
+    position: absolute;
+    bottom: 10px;
 }
 
 
